--- a/src/components/Scanner.css
+++ b/src/components/Scanner.css
@@ -15,13 +15,26 @@ html {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
+    width: 390px;
     padding: 70px;
     transform: translate(-50%, -50%);
     background: rgba(0,0,0,.5);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
+  }
+  @media screen and (max-width: 768px) {
+    .login-box{
+      top: 50%;
+      left: 49.5%;
+      width: 90%;
+      padding: 70px;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,.5);
+      box-sizing: border-box;
+      box-shadow: 0 15px 25px rgba(0,0,0,.6);
+      border-radius: 10px;
+  }
   }
   
   .login-box h2 {
