--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -66,20 +66,18 @@ button{
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
-	color: #fff;
-	background: #0000;
+	color: rgb(0, 0, 0);
+	background-color: #ffff;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
 	outline: none;
-	border: none;
+	border: 2px solid white;
 	border-radius: 5px;
 	transition: .2s ease-in;
 	cursor: pointer;
 }
-button:hover{
-	background: #ffff;
-}
+
 .login{
 	height: 460px;
     background: rgba(0,0,0,1);
