--- a/src/components/View.css
+++ b/src/components/View.css
@@ -1,4 +1,4 @@
- table{
+ .viewTable{
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -6,17 +6,17 @@
     border-radius: 3px;
   }
   
-   td,  th {
+   .viewTd,  .viewTh {
     border: 1px solid #ddd;
     padding: 8px;
   }
-  tr{
+  .viewTr{
     color: #ffffff;
     border: 1px solid white;
     text-align: center;
   }
   
-  th {
+  .viewTh {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
