--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -179,48 +179,27 @@ html {
     align-items: center;
     justify-content: space-between;
     border-radius: 5px;
-    padding: 20px 5px;
+    padding: 20px 25px;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
   }
   .wrapper .option{
-    background:  rgba(255, 254, 254, 0.1);
+    background:  rgba(255, 255, 255, 0.1);
     display: inline-flex;
     align-items: center;
     margin-right: 10px;
     border-radius: 5px;
-    opacity: 0.8;
+    opacity: 1;
     cursor: pointer;
-    padding: 0 15px 0px 0px;
+    padding:  10px;
     transition: all 0.5s ease;
-  }
-  .wrapper .option .dot{
-    height: 20px;
-    width: 20px;
-    margin: 10px;
-    background: #d9d9d9;
-    border-radius: 50%;
-    position: relative;
-  }
-  .wrapper .option .dot::before{
-    position: absolute;
-    content: "";
-    top: 5px;
-    left: 5.5px;
-    width: 10px;
-    height: 10px;
-    background: #03e9f4;
-    border-radius: 50%;
-    opacity: 0;
-    transform: scale(1.5);
-    transition: all 0.3s ease;
   }
   input[type="radio"]{
     display: none;
   }
   #option-1:checked:checked ~ .option-1,
   #option-2:checked:checked ~ .option-2{
-    border-color:#03e9f4;
-    background: #03e9f4;
+    border-color:#ffffff;
+    background: #ffffff;
   }
   #option-1:checked:checked ~ .option-1 .dot,
   #option-2:checked:checked ~ .option-2 .dot{
@@ -232,8 +211,8 @@ html {
     transform: scale(1);
   }
   .wrapper .option span{
-    font-size: 15px;
-    color: #03e9f4;
+    font-size: 25px;
+    color: #ffffff;
   }
   #option-1:checked:checked ~ .option-1 span,
   #option-2:checked:checked ~ .option-2 span{
