--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -67,7 +67,7 @@ html {
     left: 0;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     pointer-events: none;
     transition: .5s;
   }
@@ -76,15 +76,18 @@ html {
   .login-box .user-box input:valid ~ label {
     top: -20px;
     left: 0;
-    color: #03e9f4;
+    color: #ffffff;
     font-size: 12px;
+  }
+  .login-box .user-box input:invalid {
+    border-color: red;
   }
   
   .login-box form a {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
-    color: #03e9f4;
+    color: #ffffff;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -95,10 +98,10 @@ html {
   }
   
   .login-box a:hover {
-    background: #03e9f4;
+    background: #ffffff;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
+    box-shadow: 0 0 5px #f9f9f9,
 
   }
   
@@ -112,7 +115,7 @@ html {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(20deg, transparent, #03e9f4);
+    background: linear-gradient(20deg, transparent, #ffffff);
     animation: btn-anim1 1s linear infinite;
   }
   
