--- a/src/components/DetailedView.css
+++ b/src/components/DetailedView.css
@@ -33,3 +33,30 @@
   .DVth img {
     border-radius: 0px;
   }
+
+  .IvTable{
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    border: 3px white;
+    border-radius: 3px;
+  }
+
+  .IVtd,  .IVth {
+    border: 1px solid #ddd;
+    padding: 3%;
+    text-align: center;
+  }
+  .IVtr{
+    color: #ffffff;
+    border: 1px solid white;
+    text-align: center;
+  }
+  
+  .IVth {
+    padding-top: 3.5%;
+    padding-bottom: 3.5%;
+    text-align: center;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+  }
