--- a/src/components/QrCodeGenerator.css
+++ b/src/components/QrCodeGenerator.css
@@ -4,6 +4,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    image-rendering: pixelated;
 }
 @media screen and (max-width:768px) {
     .SelectTeam{
