--- a/src/components/DetailedView.css
+++ b/src/components/DetailedView.css
@@ -53,16 +53,19 @@
   }
   
   .DVth {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: left;
     background-color: #ffffff;
     color: rgb(0, 0, 0);
   }
 
-  .DVth img {
-    border-radius: 0px;
-  }
+  th.DVth img{
+    width: 200%; 
+    height: 200%; 
+    max-height: 30px;
+    border-radius: 0;
+}
 
   .IvTable{
     table-layout: fixed;
@@ -97,6 +100,12 @@
     padding: 0%;
     word-break: break-all;
     text-align: center;
+  }
+
+  .IVtd img {
+    border-radius: 0px;
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
   }
 
 
