--- a/src/components/QrCodeGenerator.css
+++ b/src/components/QrCodeGenerator.css
@@ -31,3 +31,14 @@ img{
     width: 50%;
     height:auto;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+
+}
+
+input:-webkit-autofill{
+    -webkit-text-fill-color: white !important;
+}
